Improve dependencies